<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/opText"
            android:gravity="bottom|right"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn7"
            android:id="@+id/btn_7"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn8"
            android:id="@+id/btn_8"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn9"
            android:id="@+id/btn_9"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnDiv"
            android:id="@+id/btn_div"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn4"
            android:id="@+id/btn_4"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn5"
            android:id="@+id/btn_5"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn6"
            android:id="@+id/btn_6"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnTimes"
            android:id="@+id/btn_times"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn1"
            android:id="@+id/btn_1"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn2"
            android:id="@+id/btn_2"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn3"
            android:id="@+id/btn_3"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnMinus"
            android:id="@+id/btn_minus"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnDot"
            android:id="@+id/btn_dot"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btn0"
            android:id="@+id/btn_0"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnEq"
            android:id="@+id/btn_eq"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnPlus"
            android:id="@+id/btn_plus"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>